Bug overflow of text in policy in ISR
Former-commit-id: 2d3838046ca6d4f77645572a41d1f3fda2360d5e

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -433,6 +433,9 @@ table {
     .teacher, .date, .psychometric, .policy, .adminDetails {
     font-size: 13px;
     }
+    .policy {
+      overflow-wrap: break-word;
+    }
 }
 
 .contentWrapper {
